# ya-frida-mcp

./: .gitignore  README.md  README.zh-CN.md  config.toml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: bridges.yml  publish.yml
ya_frida_mcp/: __init__.py  cli.py  config.py  installer.py  prompts.py  resources.py  server.py
ya_frida_mcp/core/: __init__.py  adb.py  base.py  bridges.py  device.py  frida_server.py  options.py  output.py  session.py
ya_frida_mcp/tools/: __init__.py  adb.py  app.py  device.py  frida_server.py  memory.py  process.py  script.py
